manifests/kube-system/coredns.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: coredns
  namespace: kube-system
spec:
  selector: k8s-app == 'kube-dns'
  types:
    - Ingress
    - Egress
  ingress:
    - metadata:
        annotations:
          from: all
          to: coredns
      action: Allow
      protocol: TCP
      source:
        selector: all()
        namespaceSelector: all()
      destination:
        ports:
          - 53
    - metadata:
        annotations:
          from: all
          to: coredns
      action: Allow
      protocol: UDP
      source:
        selector: all()
        namespaceSelector: all()
      destination:
        ports:
          - 53
  egress:
    - metadata:
        annotations:
          from: coredns
          to: dns
      action: Allow
      protocol: TCP
      destination:
        nets:
          - 10.161.128.2/32
          - 10.162.128.2/32
          - 10.163.128.2/32
        ports:
          - 53
    - metadata:
        annotations:
          from: coredns
          to: dns
      action: Allow
      protocol: UDP
      destination:
        nets:
          - 10.161.128.2/32
          - 10.162.128.2/32
          - 10.163.128.2/32
        ports:
          - 53
