manifests/kube-system/metrics-server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metrics-server
  namespace: kube-system
  labels:
    k8s-app: metrics-server
spec:
  selector:
    matchLabels:
      k8s-app: metrics-server
  template:
    metadata:
      name: metrics-server
      labels:
        k8s-app: metrics-server
    spec:
      serviceAccountName: metrics-server
      volumes:
      # mount in tmp so we can safely use from-scratch images and/or read-only containers
      - name: tmp-dir
        emptyDir: {}
      containers:
      - name: metrics-server
        image: docker.artifactory.mgmt.aws.uk.tsb/k8s-docker-remote/metrics-server/metrics-server:v0.3.7
        imagePullPolicy: IfNotPresent
        args:
          - --cert-dir=/tmp
          - --secure-port=4443
        ports:
        - name: main-port
          containerPort: 4443
          protocol: TCP
        securityContext:
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
        volumeMounts:
        - name: tmp-dir
          mountPath: /tmp
      nodeSelector:
        kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: metrics-server
  namespace: kube-system
  labels:
    kubernetes.io/name: "Metrics-server"
    kubernetes.io/cluster-service: "true"
spec:
  selector:
    k8s-app: metrics-server
  ports:
  - port: 443
    protocol: TCP
    targetPort: main-port
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: metrics-server
  namespace: kube-system
spec:
  selector: k8s-app == 'metrics-server'
  types:
    - Ingress
    - Egress
  ingress:
    - metadata:
        annotations:
          from: vpc
          to: metrics-server
      action: Allow
      protocol: TCP
      source:
        selector: vpc == 'local' && layer == 'core'
        namespaceSelector: global()
  egress:
    - metadata:
        annotations:
          from: metrics-server
          to: vpc
      action: Allow
      protocol: TCP
      destination:
        selector: vpc == 'local' && layer == 'core'
        namespaceSelector: global()
        ports:
          - 10250
